--- a/DMSDriver/DMSDriver/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--MainVC-->
         <scene sceneID="SLU-9K-zXl">
             <objects>
-                <viewController storyboardIdentifier="MainVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8QQ-Cq-ni3" customClass="MainVC" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8QQ-Cq-ni3" customClass="MainVC" customModule="Ashdod_Dev" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Yvr-9P-bsG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -73,7 +73,7 @@
         <!--BaseNV-->
         <scene sceneID="aQe-sf-Mu0">
             <objects>
-                <navigationController storyboardIdentifier="BaseNV" autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pGL-1S-ObC" customClass="BaseNV" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="BaseNV" autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pGL-1S-ObC" customClass="BaseNV" customModule="Ashdod_Dev" customModuleProvider="target" sceneMemberID="viewController">
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="0N4-jV-8cK">
@@ -95,7 +95,7 @@
         <!--BaseNV-->
         <scene sceneID="jIl-Vt-bas">
             <objects>
-                <navigationController navigationBarHidden="YES" id="W3F-sb-yZa" customClass="BaseNV" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController navigationBarHidden="YES" id="W3F-sb-yZa" customClass="BaseNV" customModule="Ashdod_Dev" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HxL-Wy-CbT">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.1764705882352941" green="0.67450980392156867" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
@@ -108,7 +108,7 @@
         <!--Slide MenuVC-->
         <scene sceneID="41O-fL-N2z">
             <objects>
-                <viewController storyboardIdentifier="SlideMenuVC" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="KjU-TH-xrR" customClass="SlideMenuVC" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SlideMenuVC" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="KjU-TH-xrR" customClass="SlideMenuVC" customModule="Ashdod_Dev" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SoV-Hu-eUk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -117,7 +117,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SlideMenuAvartarCell" rowHeight="218" id="fhq-7v-8Dw" customClass="SlideMenuCell" customModule="DMSDriver" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SlideMenuAvartarCell" rowHeight="218" id="fhq-7v-8Dw" customClass="SlideMenuCell" customModule="Ashdod_Dev" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="218"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fhq-7v-8Dw" id="QLW-mW-7HG">
@@ -196,7 +196,7 @@
                                             <outlet property="lblTitle" destination="IVy-IK-1gK" id="QgV-DG-7Mk"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SlideMenuRowCell" rowHeight="108" id="3JT-mG-qRB" customClass="SlideMenuCell" customModule="DMSDriver" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SlideMenuRowCell" rowHeight="108" id="3JT-mG-qRB" customClass="SlideMenuCell" customModule="Ashdod_Dev" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="246" width="375" height="108"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3JT-mG-qRB" id="qC3-gc-UGC">
@@ -251,17 +251,26 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gFQ-HU-laH">
+                                <rect key="frame" x="323" y="638" width="44" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="3Fi-Sg-Kmw" firstAttribute="bottom" secondItem="gFQ-HU-laH" secondAttribute="bottom" constant="8" id="3aG-kk-Wef"/>
                             <constraint firstItem="3Fi-Sg-Kmw" firstAttribute="trailing" secondItem="OL3-Jo-4v6" secondAttribute="trailing" id="6of-wO-Lrh"/>
                             <constraint firstItem="OL3-Jo-4v6" firstAttribute="top" secondItem="3Fi-Sg-Kmw" secondAttribute="top" id="DkQ-iJ-gmx"/>
                             <constraint firstItem="3Fi-Sg-Kmw" firstAttribute="bottom" secondItem="OL3-Jo-4v6" secondAttribute="bottom" id="S6T-Bb-XcT"/>
                             <constraint firstItem="OL3-Jo-4v6" firstAttribute="leading" secondItem="3Fi-Sg-Kmw" secondAttribute="leading" id="ymJ-TM-4d8"/>
+                            <constraint firstItem="3Fi-Sg-Kmw" firstAttribute="trailing" secondItem="gFQ-HU-laH" secondAttribute="trailing" constant="8" id="zGM-wD-2Yi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3Fi-Sg-Kmw"/>
                     </view>
                     <connections>
+                        <outlet property="buildVersionLabel" destination="gFQ-HU-laH" id="enb-7Y-OIo"/>
                         <outlet property="tbvContent" destination="OL3-Jo-4v6" id="yFb-g9-a7v"/>
                     </connections>
                 </viewController>
