--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -18,7 +18,7 @@
         <!--Login View Controller-->
         <scene sceneID="upI-VQ-Pfn">
             <objects>
-                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="3T1-w1-Qsx" customClass="LoginViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="3T1-w1-Qsx" customClass="LoginViewController" customModule="Ashdod_Dev" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CDp-iu-yfc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
