--- a/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
@@ -601,7 +601,7 @@
                                             <outlet property="nameLabel" destination="m4j-Gm-bIq" id="21I-kX-IBn"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReturnedItemQuantityCell" rowHeight="65" id="oy1-LF-VW3" customClass="ReturnedItemQuantityCell" customModule="Ashdod_Dev" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ReturnedItemQuantityCell" rowHeight="65" id="oy1-LF-VW3" customClass="ReturnedItemQuantityCell" customModule="Ashdod_Dev" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="343.5" width="375" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oy1-LF-VW3" id="bDF-Bf-EQg">
